# controller/userController.go
@@ -5,48 +5,46 @@ import (
 	"fmt"
 	"github.com/dlclark/regexp2"
 	"github.com/gin-gonic/gin"
-	"github.com/xissg/userManageSystem/model"
+	"github.com/xissg/userManageSystem/model/entity"
 	"github.com/xissg/userManageSystem/service"
 	"github.com/xissg/userManageSystem/utils"
 	"gorm.io/gorm"
 	"log"
 	"net/http"
-	"time"
 )
 
 // 用户的登录状态
 const (
 	ANONYMOUS = iota
-	LOGIN
+	COMMON
 	ADMIN //user_role 字段判断是否为admin用户
 )
 
 type UserController struct {
 	sessionService service.SessionService
-	rwdService     *service.RWDService
+	userService    *service.UserService
 }
 
-func NewUserController(userService service.DBService, redisService service.CacheService, sessionService service.SessionService) *UserController {
+func NewUserController(userService service.UserService, sessionService service.SessionService) *UserController {
 
 	return &UserController{
 		sessionService: sessionService,
-		rwdService:     service.NewRWDService(userService, redisService),
+		userService:    &userService,
 	}
 }
 
 // 校验用户是否登录以及是否为admin用户
-func (uc *UserController) checkValidity(c *gin.Context) int {
-	userSession := uc.sessionService.GetSession(c)
+func (uc *UserController) checkValidity(c *gin.Context) (int, entity.UserSession) {
+	userSession, err := uc.sessionService.GetSession(c)
+	if err != nil {
+		return ANONYMOUS, entity.UserSession{}
+	}
 	if userSession.Role == ADMIN {
 
-		return ADMIN
+		return ADMIN, userSession
 	}
 
-	if userSession.Role == LOGIN {
-		return LOGIN
-	}
-
-	return ANONYMOUS
+	return COMMON, userSession
 }
 
 // Register 用户注册
@@ -57,39 +55,30 @@ func (uc *UserController) checkValidity(c *gin.Context) int {
 //	@Accept			json
 //	@Produce		json
 //	@Param			user	body		string										true	"User object"
-//	@Success		200		{object}	model.ApiResponse{data=model.ReturnUser}	"Success registered"
-//	@Failure		400		{object}	model.ApiResponse{data=nil}					"Registration failed"
+//	@Success		200		{object}	utils.apiResponse{data=model.ReturnUser}	"Success registered"
+//	@Failure		400		{object}	utils.apiResponse{data=nil}					"Registration failed"
 //	@Router			/user/register [post]
 func (uc *UserController) Register(c *gin.Context) {
-	var user model.User
+	var receiveUser entity.AddUser
 
 	//反序列化取出JSON数据
-	if err := c.ShouldBindJSON(&user); err != nil {
+	if err := c.ShouldBindJSON(&receiveUser); err != nil {
 		log.Printf("JSON unmarshal  %v", err)
 
 		return
 	}
 
 	//校验用户名长度
-	if len(user.UserName) < 4 || len(user.UserName) > 32 {
-		c.JSON(http.StatusBadRequest, utils.Error(utils.LOGINERR, "user name too short or too long"))
-		log.Printf("wrong user name length")
-
-		return
-	}
-
-	//校验用户名是否存在
-	_, err := uc.rwdService.GetUser(user, c)
-	if !errors.Is(err, gorm.ErrRecordNotFound) {
-		c.JSON(http.StatusBadRequest, utils.Error(utils.LOGINERR, "username repeated"))
-		log.Println("username repeated")
+	if len(receiveUser.UserName) < 4 || len(receiveUser.UserName) > 32 {
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "receiveUser name too short or too long").LoginERR())
+		log.Printf("wrong receiveUser name length")
 
 		return
 	}
 
 	//校验密码长度
-	if len(user.UserPassword) < 8 || len(user.UserPassword) > 32 {
-		c.JSON(http.StatusBadRequest, utils.Error(utils.LOGINERR, "wrong password length"))
+	if len(receiveUser.UserPassword) < 8 || len(receiveUser.UserPassword) > 32 {
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "wrong password length").LoginERR())
 		log.Printf("wrong password length")
 
 		return
@@ -98,42 +87,43 @@ func (uc *UserController) Register(c *gin.Context) {
 	//校验密码合法性
 	expr := `^(?![0-9a-zA-Z]+$)(?![a-zA-Z!@#$%^&*]+$)(?![0-9!@#$%^&*]+$)[0-9A-Za-z!@#$%^&*]{8,16}$`
 	reg, _ := regexp2.Compile(expr, 0)
-	m, _ := reg.MatchString(user.UserPassword)
+	m, _ := reg.MatchString(receiveUser.UserPassword)
 	if !m {
-		c.JSON(http.StatusBadRequest, utils.Error(utils.LOGINERR, "Invalid password, At least one special character, lowercase and uppercase, is required"))
-		log.Printf("illegal user password")
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "Invalid password, At least one special character, lowercase and uppercase, is required").LoginERR())
+		log.Printf("illegal receiveUser password")
+
+		return
+	}
+
+	//校验用户名是否存在
+	_, err := uc.userService.GetUser(receiveUser.UserName, c)
+	if !errors.Is(err, gorm.ErrRecordNotFound) {
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "username repeated").LoginERR())
+		log.Println("username repeated")
 
 		return
 	}
 
 	//用户密码脱敏
-	user.UserPassword = utils.MD5Crypt(user.UserPassword)
+	receiveUser.UserPassword = utils.MD5Crypt(receiveUser.UserPassword)
 
-	//生成唯一id
-	id, err := utils.IdGenerator()
-	if err != nil {
-		log.Println(fmt.Sprintf("id generator %v", err))
-
-		return
-	}
-
-	//生成创建时间和更新时间
-	user.ID = id.Int64()
-	user.CreateTime = time.Now().UTC()
-	user.UpdateTime = time.Now().UTC()
+	//生成用户
+	var user entity.User
+	user = entity.AddUserToUser(receiveUser)
 
 	//插入数据库
-	err = uc.rwdService.AddUser(user, c)
+	err = uc.userService.AddUser(user, c)
 	if err != nil {
-		log.Printf("create user failed")
+		log.Printf("create receiveUser failed")
 
 		return
 	}
 
 	//插入成功
-	resultUser := model.UserProc(user)
+	resultUser := entity.SafetyUser(user)
 	log.Printf("register success")
-	c.JSON(http.StatusOK, utils.Success(resultUser, "register success"))
+	c.JSON(http.StatusOK, utils.NewResponse(resultUser, "register success").Success())
+
 }
 
 // Login 用户登录
@@ -144,11 +134,11 @@ func (uc *UserController) Register(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			user	body		string										true	"User object"
-//	@Success		200		{object}	model.ApiResponse{data=model.ReturnUser}	"Login successful"
-//	@Failure		400		{object}	model.ApiResponse{data=nil}					"Login failed"
+//	@Success		200		{object}	utils.apiResponse{data=model.ReturnUser}	"Login successful"
+//	@Failure		400		{object}	utils.apiResponse{data=nil}					"Login failed"
 //	@Router			/user/login [post]
 func (uc *UserController) Login(c *gin.Context) {
-	var user model.User
+	var user entity.LoginUser
 
 	//反序列化取出JSON数据
 	if err := c.ShouldBindJSON(&user); err != nil {
@@ -160,33 +150,36 @@ func (uc *UserController) Login(c *gin.Context) {
 	//判断用户名和密码是否为空
 	if user.UserName == "" || user.UserPassword == "" {
 		log.Printf("username  or password  is empty")
-		c.JSON(http.StatusBadRequest, utils.Error(utils.LOGINERR, "username or password is empty"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "username or password is empty").LoginERR())
 
 		return
 	}
 
-	///用户密码脱敏
+	//用户密码加密
 	user.UserPassword = utils.MD5Crypt(user.UserPassword)
 
 	//查询用户用户名和密码是否匹配
-	ret, err := uc.rwdService.GetUser(user, c)
+	ret, err := uc.userService.GetUser(user.UserName, c)
 	if ret == nil {
 		log.Println("The user has not registered yet")
-		c.JSON(http.StatusBadRequest, utils.Error(utils.AUTHERR, "The user has not registered yet"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "The user has not registered yet").AuthERR())
 
 		return
 	}
 
-	re := ret.(model.User)
+	re := ret.(entity.User)
 	if re.UserPassword != user.UserPassword {
 		log.Println("username or password is wrong")
-		c.JSON(http.StatusBadRequest, utils.Error(utils.AUTHERR, "username or password is wrong"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "username or password is wrong").AuthERR())
 
 		return
 	}
 
 	//登录成功, 存储session信息
-	userSession := model.UserSession{
+	if re.UserRole == ANONYMOUS {
+		re.UserRole = COMMON
+	}
+	userSession := entity.UserSession{
 		ID:       re.ID,
 		UserName: re.UserName,
 		Role:     re.UserRole,
@@ -199,10 +192,8 @@ func (uc *UserController) Login(c *gin.Context) {
 		return
 	}
 
-	var resultUsers *model.ReturnUser
-	resultUsers = model.UserProc(re)
 	log.Printf("login success")
-	c.JSON(http.StatusOK, utils.Success(resultUsers, "login success"))
+	c.JSON(http.StatusOK, utils.NewResponse(nil, "login success").Success())
 }
 
 // Logout 登出账户
@@ -213,15 +204,15 @@ func (uc *UserController) Login(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			user	body		string						true	"User object"
-//	@Success		200		{object}	model.ApiResponse{data=nil}	"Logout successful"
-//	@Failure		400		{object}	model.ApiResponse{data=nil}	"Logout failed"
+//	@Success		200		{object}	utils.apiResponse{data=nil}	"Logout successful"
+//	@Failure		400		{object}	utils.apiResponse{data=nil}	"Logout failed"
 //	@Router			/user/logout [get]
 func (uc *UserController) Logout(c *gin.Context) {
 	//判断用户是否登录
-	validity := uc.checkValidity(c)
+	validity, _ := uc.checkValidity(c)
 	if validity == ANONYMOUS {
 		log.Printf("you must login first")
-		c.JSON(http.StatusBadRequest, utils.Error(utils.LOGINERR, "you must login first"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "you must login first").LoginERR())
 
 		return
 	}
@@ -235,7 +226,7 @@ func (uc *UserController) Logout(c *gin.Context) {
 	}
 
 	log.Printf("logout success")
-	c.JSON(http.StatusOK, utils.Success(nil, "logout success"))
+	c.JSON(http.StatusOK, utils.NewResponse(nil, "logout success").Success())
 }
 
 // QueryUser 查询用户
@@ -246,49 +237,46 @@ func (uc *UserController) Logout(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			username	query		string										true	"Username"
-//	@Success		200			{object}	model.ApiResponse{data=model.ReturnUser}	"Query successful"
-//	@Failure		400			{object}	model.ApiResponse{data=nil}					"Query failed"
+//	@Success		200			{object}	utils.apiResponse{data=model.ReturnUser}	"Query successful"
+//	@Failure		400			{object}	utils.apiResponse{data=nil}					"Query failed"
 //	@Router			/user/admin/query [get]
 func (uc *UserController) QueryUser(c *gin.Context) {
 	//判断用户权限
-	validity := uc.checkValidity(c)
+	validity, _ := uc.checkValidity(c)
 
 	if validity != ADMIN {
-		c.JSON(http.StatusBadRequest, utils.Error(utils.AUTHERR, "you are not admin"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "you are not admin").AuthERR())
 
 		return
 	}
 
 	//获取username参数的值
-	var user model.User
-
 	username := c.Param("username")
 	if username == "" {
 		log.Println("not a valid query username")
-		c.JSON(http.StatusBadRequest, utils.Error(utils.PARAMSERR, "not a valid query username"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "not a valid query username").ParamsERR())
 
 		return
 	}
 
-	user.UserName = username
-	res, err := uc.rwdService.GetUser(user, c)
+	res, err := uc.userService.GetUser(username, c)
 	if res == nil {
 		log.Println("query user not found")
-		c.JSON(http.StatusBadRequest, utils.Error(utils.PARAMSERR, "query user not found"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "query user not found").ParamsERR())
 
 		return
 	}
 
 	if err != nil {
 		log.Println(fmt.Sprintf("query user %v", err))
-		c.JSON(http.StatusBadRequest, utils.Error(utils.OPERATIONERR, "query user error"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "query user error").OperationERR())
 
 		return
 	}
 
-	ret := model.UserProc(res.(model.User))
+	ret := entity.SafetyUser(res.(entity.User))
 	log.Println("query user success")
-	c.JSON(http.StatusOK, utils.Success(ret, "query user success"))
+	c.JSON(http.StatusOK, utils.NewResponse(ret, "query user success").Success())
 }
 
 // UpdateUser 更新用户信息
@@ -299,21 +287,21 @@ func (uc *UserController) QueryUser(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			user	body		string						true	"User object"
-//	@Success		200		{object}	model.ApiResponse{data=nil}	"UpdateUser successful"
-//	@Failure		400		{object}	model.ApiResponse{data=nil}	"UpdateUser failed"
+//	@Success		200		{object}	utils.apiResponse{data=nil}	"UpdateUser successful"
+//	@Failure		400		{object}	utils.apiResponse{data=nil}	"UpdateUser failed"
 //	@Router			/user/update [post]
 func (uc *UserController) UpdateUser(c *gin.Context) {
 	//判断用户权限
-	validity := uc.checkValidity(c)
+	validity, userSession := uc.checkValidity(c)
 
 	if validity == ANONYMOUS {
 		log.Printf("you are not login")
-		c.JSON(http.StatusBadRequest, utils.Error(utils.AUTHERR, "you are not login"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "you are not login").AuthERR())
 
 		return
 	}
 
-	var user model.User
+	var user entity.UpdateUser
 	//反序列化取出JSON数据
 	if err := c.ShouldBindJSON(&user); err != nil {
 		log.Printf("JSON unmarshal  %v", err)
@@ -321,22 +309,38 @@ func (uc *UserController) UpdateUser(c *gin.Context) {
 		return
 	}
 
-	//普通用户只允许修改自己的信息
-	if validity == LOGIN {
-		sessionInfo := uc.sessionService.GetSession(c)
-		user.UserName = sessionInfo.UserName
+	//密码要加密
+	if user.UserPassword != "" {
+		user.UserPassword = utils.MD5Crypt(user.UserPassword)
 	}
 
-	//admin用户允许修改其他人的信息
-	err := uc.rwdService.UpdateUserAll(user, c)
-	if err != nil {
-		log.Printf("user info update  %v", err)
+	//普通用户只允许修改自己的信息
+	if validity != ADMIN {
+		user.UserName = userSession.UserName
+	}
 
-		return
+	count, column := entity.CountParams(user)
+	if count > 1 {
+		//admin用户允许修改其他人的信息
+		err := uc.userService.UpdateUserAll(user, c)
+		if err != nil {
+			log.Printf("user info update  %v", err)
+
+			return
+		}
+	}
+
+	if count == 1 {
+		err := uc.userService.UpdateUserOne(column, user, c)
+		if err != nil {
+			log.Printf("user info update  %v", err)
+
+			return
+		}
 	}
 
 	log.Printf("update user success")
-	c.JSON(http.StatusOK, utils.Success(nil, "update user success"))
+	c.JSON(http.StatusOK, utils.NewResponse(nil, "update user success").Success())
 }
 
 // DeleteUser 删除用户
@@ -347,54 +351,37 @@ func (uc *UserController) UpdateUser(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			username	query		string						true	"Username"
-//	@Success		200			{object}	model.ApiResponse{data=nil}	"DeleteUser successful"
-//	@Failure		400			{object}	model.ApiResponse{data=nil}	"DeleteUser failed"
+//	@Success		200			{object}	utils.apiResponse{data=nil}	"DeleteUser successful"
+//	@Failure		400			{object}	utils.apiResponse{data=nil}	"DeleteUser failed"
 //	@Router			/user/admin/delete [get]
 func (uc *UserController) DeleteUser(c *gin.Context) {
 
 	//判断用户权限
-	validity := uc.checkValidity(c)
+	validity, _ := uc.checkValidity(c)
 	if validity != ADMIN {
-		c.JSON(http.StatusBadRequest, utils.Error(utils.AUTHERR, "you are not validity user"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "you are not validity user").AuthERR())
 
 		return
 	}
 
 	//获取username参数的值
-	var user model.User
-
 	username := c.Param("username")
 	if username == "" {
 		log.Println("not a valid query username")
-		c.JSON(http.StatusBadRequest, utils.Error(utils.PARAMSERR, "not a valid query username"))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, "not a valid query username").ParamsERR())
 
 		return
 	}
 
-	user.UserName = username
-
 	//逻辑删除用户
-	err := uc.rwdService.DeleteUser(user, c)
+	err := uc.userService.DeleteUser(username, c)
 	if err != nil {
 		log.Printf("delete user  %v", err)
-		c.JSON(http.StatusBadRequest, utils.Error(utils.OPERATIONERR, err.Error()))
+		c.JSON(http.StatusBadRequest, utils.NewResponse(nil, err.Error()).OperationERR())
 
 		return
 	}
 
 	log.Printf("delete user success")
-	c.JSON(http.StatusOK, utils.Success(nil, "delete user success"))
+	c.JSON(http.StatusOK, utils.NewResponse(nil, "delete user success").Success())
 }
-
-//func (uc *UserController) AddTags(c *gin.Context) {
-//
-//}
-//func (uc *UserController) UpdateTags(c *gin.Context) {
-//
-//}
-//func (uc *UserController) MatchUsersByTags(c *gin.Context) {
-//
-//}
-//func (uc *UserController) DeleteTags(c *gin.Context) {
-//
-//}
