# docs/swagger.yaml
@@ -1,13 +1,5 @@
 definitions:
-  model.ApiResponse:
-    properties:
-      code:
-        type: integer
-      data: {}
-      msg:
-        type: string
-    type: object
-  model.ResultUser:
+  model.ReturnUser:
     properties:
       avatar_url:
         description: 用户头像
@@ -28,6 +20,14 @@ definitions:
         description: 0为普通用户, 1为会员用户
         type: integer
     type: object
+  utils.ApiResponse:
+    properties:
+      code:
+        type: integer
+      data: {}
+      msg:
+        type: string
+    type: object
 info:
   contact: {}
   title: 用户管理系统
@@ -37,7 +37,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Delete user information by username
+      description: DeleteUser user information by username
       parameters:
       - description: Username
         in: query
@@ -48,24 +48,24 @@ paths:
       - application/json
       responses:
         "200":
-          description: Delete successful
+          description: DeleteUser successful
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
                   type: object
               type: object
         "400":
-          description: Delete failed
+          description: DeleteUser failed
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
                   type: object
               type: object
-      summary: Delete user by username
+      summary: DeleteUser user by username
       tags:
       - User
   /user/admin/query:
@@ -86,16 +86,16 @@ paths:
           description: Query successful
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/model.ResultUser'
+                  $ref: '#/definitions/model.ReturnUser'
               type: object
         "400":
           description: Query failed
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
                   type: object
@@ -122,16 +122,16 @@ paths:
           description: Login successful
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/model.ResultUser'
+                  $ref: '#/definitions/model.ReturnUser'
               type: object
         "400":
           description: Login failed
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
                   type: object
@@ -158,7 +158,7 @@ paths:
           description: Logout successful
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
                   type: object
@@ -167,7 +167,7 @@ paths:
           description: Logout failed
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
                   type: object
@@ -194,16 +194,16 @@ paths:
           description: Success registered
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/model.ResultUser'
+                  $ref: '#/definitions/model.ReturnUser'
               type: object
         "400":
           description: Registration failed
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
                   type: object
@@ -215,7 +215,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Update user information
+      description: UpdateUser user information
       parameters:
       - description: User object
         in: body
@@ -227,19 +227,19 @@ paths:
       - application/json
       responses:
         "200":
-          description: Update successful
+          description: UpdateUser successful
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
                   type: object
               type: object
         "400":
-          description: Update failed
+          description: UpdateUser failed
           schema:
             allOf:
-            - $ref: '#/definitions/model.ApiResponse'
+            - $ref: '#/definitions/utils.ApiResponse'
             - properties:
                 data:
                   type: object
